--- a/sass/layout/_work-section.scss
+++ b/sass/layout/_work-section.scss
@@ -11,11 +11,12 @@
   display: flex;
   /*margin-bottom: 94px;*/
 }
-.list-img li:not(:last-child) {
-  margin-right: 32px;
-}
+
 .list-img li {
   position: relative;
+  &:not(:last-child) {
+    margin-right: 32px;
+  }
 }
 .list-img-text {
   position: absolute;
