--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import "./utils/animations";
 @import "./base/container";
 @import "./components/btn";
+@import "./components/socials";
 @import "./base/section";
 @import "./layout/site-nav";
 @import "./layout/hero";
