--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -9,12 +9,15 @@
   /*margin-top: 94px;
   margin-bottom: 94px;*/
 }
-.text-benefits-text:not(:last-child) {
-  margin-right: 32px;
-}
-.text-benefits-text h3 {
-  margin-bottom: 10px;
-  text-transform: uppercase;
+
+.text-benefits-text {
+  &:not(:last-child) {
+    margin-right: 32px;
+  }
+  h3 {
+    margin-bottom: 10px;
+    text-transform: uppercase;
+  }
 }
 .text-benefits p {
   font-size: 14px;
