--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -43,12 +43,13 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   line-height: 1.88;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: #188ce8;
+    cursor: pointer;
+  }
 }
-.button:hover,
-.button:focus {
-  background-color: #188ce8;
-  cursor: pointer;
-}
+
 .backdrop {
   position: fixed;
   top: 0;
