--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -19,13 +19,14 @@
   margin-bottom: 50px;
   /* width: 1200px;*/
 }
-.portfolio-list-item:not(:last-child) {
-  margin-right: 8px;
-  /*justify-content: center;*/
-}
+
 .portfolio-list-item {
   display: block;
   justify-content: center;
+  &:not(:last-child) {
+    margin-right: 8px;
+    /*justify-content: center;*/
+  }
 }
 .portfolio-img {
   display: flex;
@@ -44,6 +45,12 @@
   margin-left: 30px;
   border: 1px solid rgba(238, 238, 238, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    opacity: 1;
+  }
 }
 
 .portfolio-text {
@@ -94,11 +101,11 @@
   letter-spacing: 0.03em;
   border-radius: 4px;
   padding: 6px 22px;
-}
-.portfolio-button:hover,
-.portfolio-button:focus {
-  color: #ffffff;
-  background-color: #2196f3;
+  &:hover,
+  &:focus {
+    color: #ffffff;
+    background-color: #2196f3;
+  }
 }
 
 .portfolio-button {
@@ -118,12 +125,7 @@
 
   letter-spacing: 0.03em;
 }
-.portfolio-img-item:hover,
-.portfolio-img-item:focus {
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  opacity: 1;
-}
+
 .portfolio-img-overl {
   position: relative;
   overflow: hidden;
@@ -144,6 +146,10 @@
   /*opacity: 1;*/
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .portfolio-img-over:hover &,
+  .portfolio-img-over:focus & {
+    transform: translateY(0);
+  }
 }
 .portfolio-text-overl p {
   padding: 64px 23px;
@@ -157,8 +163,4 @@
   color: #ffffff;
   /* pointer-events: none;*/
   /*background-color: #2f303a;*/
-}
-.portfolio-img-over:hover .portfolio-text-overl,
-.portfolio-img-over:focus .portfolio-text-overl {
-  transform: translateY(0);
 }
