--- a/sass/layout/_site-nav.scss
+++ b/sass/layout/_site-nav.scss
@@ -23,17 +23,16 @@
   /*padding-top: 32px;
   padding-bottom: 32px;*/
 }
-.site-nav .nav-item:not(:last-child) {
-  margin-right: 50px;
-}
+
 .link-items {
   display: flex;
   align-items: center;
   margin-left: auto;
+  &:not(:last-child) {
+    margin-right: 50px;
+  }
 }
-.link-items:not(:last-child) {
-  margin-right: 50px;
-}
+
 .site-nav-logo {
   margin-right: 93px;
   font-family: Raleway, sans-serif;
@@ -70,11 +69,10 @@
   letter-spacing: 0.02em;
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.site-nav .link:hover,
-.site-nav .link:focus {
-  color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .link-items .current {
@@ -90,59 +88,65 @@
   text-decoration: none;
   margin-right: 50px;
   transition: color fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.link-items .current:not(:last-child) {
-  margin-right: 50px;
-}
-.link-items .current:hover,
-.link-items .current:focus {
-  color: var(--accent-color);
-  fill: var(--accent-color);
+  &:not(:last-child) {
+    margin-right: 50px;
+  }
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+    fill: var(--accent-color);
+  }
+  &:hover use,
+  &:focus use {
+    color: var(--accent-color);
+    fill: var(--accent-color);
+  }
 }
 
-.link-items .current:hover use,
-.link-items .current:focus use {
-  color: var(--accent-color);
-  fill: var(--accent-color);
-}
 .icon-envelope {
   background-color: #ffffff;
   fill: #757575;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
 }
-.icon-envelope:hover,
-.icon-envelope:focus {
-  fill: var(--accent-color);
-}
+
 .icon-smartphone {
   fill: #757575;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
 }
-.icon-smartphone:hover,
-.icon-smartphone:focus {
-  fill: var(--accent-color);
-}
+
 .nav-item {
   position: relative;
+  &:not(:last-child) {
+    margin-right: 50px;
+  }
 }
-.nav-item-link.current::after {
-  content: "";
 
-  position: absolute;
-  left: 0;
-  bottom: 0;
-
-  display: block;
-  width: 100%;
-  height: 4px;
-  background: #2196f3;
-  border-radius: 2px;
-
-  /*opacity: 0;
-  transform: scaleX(0);*/
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 .nav-item-link.current {
   color: var(--accent-color);
+  &::after {
+    content: "";
+
+    position: absolute;
+    left: 0;
+    bottom: 0;
+
+    display: block;
+    width: 100%;
+    height: 4px;
+    background: #2196f3;
+    border-radius: 2px;
+
+    /*opacity: 0;
+  transform: scaleX(0);*/
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
