--- a/css/main.css
+++ b/css/main.css
@@ -133,16 +133,16 @@ img {
   justify-content: center;
 }
 
-.socials-item {
+.masters-socials__socials-item {
   width: 44px;
   height: 44px;
 }
 
-.socials-item:not(:last-child) {
+.masters-socials__socials-item:not(:last-child) {
   margin-right: 10px;
 }
 
-.socials-link {
+.masters-socials__socials-link {
   width: 100%;
   height: 100%;
   display: flex;
@@ -154,23 +154,23 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.socials-link:hover, .socials-link:focus {
+.masters-socials__socials-link:hover, .masters-socials__socials-link:focus {
   background-color: #2196f3;
   fill: #ffffff;
 }
 
-.socials-link:hover use,
-.socials-link:focus use {
+.masters-socials__socials-link:hover use,
+.masters-socials__socials-link:focus use {
   background-color: #2196f3;
   fill: #ffffff;
 }
 
-.socials-icon {
+.masters-socials__socials-icon {
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.socials-icon:hover, .socials-icon:focus {
+.masters-socials__socials-icon:hover, .masters-socials__socials-icon:focus {
   fill: #ffffff;
 }
 
@@ -188,13 +188,6 @@ img {
 .main-nav {
   display: flex;
   align-items: center;
-  /* width: 1200px;*/
-  /*padding-left: 15px;
-  padding-right: 15px;*/
-  /* opacity: 0;
-  transform: scaleX(0);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
 }
 
 .site-nav {
@@ -309,7 +302,7 @@ img {
   position: relative;
 }
 
-.nav-item:not(:last-child) {
+.site-nav .nav-item:not(:last-child) {
   margin-right: 50px;
 }
 
@@ -388,7 +381,7 @@ img {
   /*#2196F3*/
 }
 
-.backdrop.is-hidden {
+.is-hidden {
   opacity: 0;
   pointer-events: none;
 }
@@ -421,11 +414,6 @@ img {
 }
 
 .form {
-  /* width: 448px;
-  height: 342px;*/
-  /*outline: 1px solid tomato;*/
-  /* padding: 20px;*/
-  /* margin: 20px;*/
   padding: 40px;
 }
 
@@ -450,20 +438,11 @@ img {
   color: #757575;
 }
 
-.form-field {
-  /* outline: 1px solid blue; */
-  /* display: flex;*/
-  display: block;
-  flex-direction: column;
-  margin-bottom: 20px;
-  text-align: left;
-}
-
-.form-field label {
+.form__field label {
   margin-bottom: 5px;
 }
 
-.form-field input {
+.form__field input {
   margin: 0;
   padding: 10px 20px;
   border-radius: 3px;
@@ -475,28 +454,24 @@ img {
   padding-left: 40px;
 }
 
-.form-field {
+.form__field {
   position: relative;
   display: block;
+  flex-direction: column;
+  text-align: left;
   margin-bottom: 10px;
 }
 
-.form-field:focus-within > input {
+.form__field:focus-within > input {
   outline: none;
   border: 1px solid #2196f3;
 }
 
-.form-field input:focus {
+.form__field input:focus {
   border: 1px solid #2196f3;
 }
 
-.form-label {
-  /*position: absolute;
-  top: 50%;
-  left: 40px;
- transform: translateY(-50%);
-   transform: translateY(-50px);
-  left: 0;*/
+.form__label {
   font-family: Roboto;
   font-size: 12px;
   font-style: normal;
@@ -507,7 +482,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input {
+.form__input {
   width: 100%;
   margin: 0;
   padding: 10px 20px;
@@ -517,7 +492,7 @@ img {
   border: 1px solid rgba(33, 33, 33, 0.2);
 }
 
-.icon {
+.form__icon {
   position: absolute;
   top: 70%;
   left: 10px;
@@ -528,39 +503,20 @@ img {
   /*background-color: tomato;*/
 }
 
-.form-field:focus-within > .icon {
+.form__field:focus-within > .form__icon {
   fill: #2196f3;
-  /* background-color: blue;*/
-  /*border: 1px solid rgba(33, 150, 243, 1);*/
 }
 
-/*.form-field:focus-within > .form-label,
-.form-input:not(:placeholder-shown) + .form-label {
-  transform: translateY(-50px);
-  left: 0;
-}*/
-.form-label-comment {
-  /*position: absolute;
-  left: 55px;
-  top: 280px;*/
+.form__form-label-comment {
   display: block;
   text-align: left;
 }
 
-.field {
-  /*position: fixed;
-   width: 448px;
-  display: flex;
-  align-items: center;*/
-  /* outline: 1px solid black; */
+.form__field-form {
   display: block;
 }
 
 .checkbox {
-  /* -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  position: absolute; */
   position: absolute;
   width: 1px;
   height: 1px;
@@ -571,7 +527,7 @@ img {
   overflow: hidden;
 }
 
-.icon {
+.form__icon {
   display: inline-block;
   width: 15px;
   height: 15px;
@@ -581,7 +537,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.checkbox:checked + .icon {
+.checkbox:checked + .form__icon {
   transform: scale(1.2);
   border-color: transparent;
   background: #2196f3;
@@ -591,7 +547,7 @@ img {
   background-origin: border-box;
 }
 
-.icon-field {
+.form__icon-field {
   display: inline-block;
   width: 15px;
   height: 15px;
@@ -601,7 +557,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.checkbox:checked + .icon-field {
+.checkbox:checked + .form__icon-field {
   transform: scale(1.2);
   border-color: transparent;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -613,7 +569,7 @@ img {
   background-origin: border-box;
 }
 
-.icon-form-field {
+.form__icon-form-field {
   position: absolute;
   left: 0%;
   /*display: flex;
@@ -621,7 +577,7 @@ img {
   align-items:flex-start;*/
 }
 
-.form-field-comment {
+.form__form-field-comment {
   width: 450px;
   height: 120px;
   margin: 0;
@@ -630,16 +586,12 @@ img {
   border: 1px solid rgba(33, 33, 33, 0.2);
 }
 
-.form-field-comment:focus {
+.form__form-field-comment:focus {
   border: 1px solid #2196f3;
   outline: none;
 }
 
-/*.label {
-  margin-left: 30px;
-  transition: transform 250ms linear;
-}*/
-.icon-field {
+.form__icon-field {
   border: 2px solid #2a2a2a;
   width: 15px;
   height: 15px;
@@ -647,39 +599,33 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.field {
+.form__field-form {
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
 
-.field-text {
+.form__field-text {
   color: #2196f3;
   text-decoration-line: underline;
 }
 
-/*.checkbox:checked ~ .label {
-  transform: translateX(40px);
-}*/
-/*.form-field: placeholder {
-  padding: 10px;
-}*/
 /* преимущества benefits*/
 .benefits h2 {
   text-align: center;
 }
 
-.text-benefits-list {
+.benefits-list {
   display: flex;
   /*margin-top: 94px;
   margin-bottom: 94px;*/
 }
 
-.text-benefits-text:not(:last-child) {
+.benefits-list__text:not(:last-child) {
   margin-right: 32px;
 }
 
-.text-benefits-text h3 {
+.benefits-list__text h3 {
   margin-bottom: 10px;
   text-transform: uppercase;
 }
@@ -690,7 +636,7 @@ img {
   letter-spacing: 0.03em;
 }
 
-.text-benefits-icon {
+.benefits-list__icon {
   /*position: absolute;*/
   width: 270px;
   height: 120px;
@@ -725,7 +671,7 @@ img {
   margin-right: 32px;
 }
 
-.list-img-text {
+.list-img__text {
   position: absolute;
   right: 0;
   bottom: -15px;
@@ -767,15 +713,15 @@ img {
   /*/box-shadow: 0 0 4px 0 black;*/
 }
 
-.position-list-img:not(:last-child) {
-  margin-right: 30px;
-}
-
-.position-list-img {
+.position-list__img {
   text-align: center;
 }
 
-.position-list-text {
+.position-list__img:not(:last-child) {
+  margin-right: 30px;
+}
+
+.position-list__text {
   height: 168px;
   /* margin-top: 30px;*/
   /* margin-bottom: 30px;*/
@@ -811,7 +757,7 @@ img {
   justify-content: center;
 }
 
-.client-item {
+.masters-client__item {
   width: 170px;
   height: 92px;
   border-radius: 4px;
@@ -822,17 +768,17 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.client-item:not(:last-child) {
+.masters-client__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.client-item:hover, .client-item:focus {
+.masters-client__item:hover, .masters-client__item:focus {
   fill: #2196f3;
   border: 1px solid #2196f3;
   /*background-color: blue;*/
 }
 
-.client-link {
+.masters-client__link {
   width: 100%;
   height: 100%;
   /*display: flex;
@@ -842,24 +788,24 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.client-link:hover, .client-link:focus {
+.masters-client__link:hover, .masters-client__link:focus {
   /*background-color: #2196f3;*/
   fill: #2196f3;
 }
 
-.client-link:hover use,
-.client-link:focus use {
+.masters-client__link:hover use,
+.masters-client__link:focus use {
   /*background-color: #2196f3;*/
   fill: #2196f3;
 }
 
-.client-icon {
+.masters-client__icon {
   margin: 16px 32px 16px 32px;
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.client-icon:hover, .client-icon:focus {
+.masters-client__icon:hover, .masters-client__icon:focus {
   fill: #2196f3;
   /*background-color: blue;*/
 }
@@ -897,14 +843,14 @@ footer {
   /*margin-right: 70px;*/
 }
 
-.link-bottom {
+.bottom-list__link-bottom {
   color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
 
-.link-bottom:hover, .link-bottom:focus {
+.bottom-list__link-bottom:hover, .bottom-list__link-bottom:focus {
   color: var(--accent-color);
 }
 
@@ -941,7 +887,7 @@ footer {
   color: #ffffff;
 }
 
-.socials-link-futer {
+.masters-socials-futer__link {
   background: rgba(255, 255, 255, 0.1);
 }
 
@@ -972,7 +918,7 @@ footer {
   padding-bottom: 10px;
 }
 
-.socials-item-futer:not(:last-child) {
+.masters-socials-futer__item:not(:last-child) {
   margin-right: 10px;
 }
 
@@ -981,27 +927,27 @@ footer {
   margin-right: 93px;
 }
 
-.form-futer-box {
+.form-box {
   display: flex;
   justify-content: flex-end;
 }
 
-.form-futer-icon {
+.form-box__futer-icon {
   display: flex;
   justify-content: center;
 }
 
-.form-futer-icon button {
+.form-box__futer-icon button {
   width: 200px;
   height: 50px;
 }
 
-.botton-futer {
+.form-box__botton-futer {
   /*padding: 10px 28px 10px 29px;*/
   text-align: center;
 }
 
-.button-futer {
+.form-box__button-futer {
   display: flex;
 }
 
@@ -1009,13 +955,40 @@ footer {
   margin-left: 10px;
 }
 
-.form-futer-icon input {
+.form-box__futer-icon input {
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   border-radius: 4px;
   margin-right: 12px;
+}
+
+.form-box__icons-futer h2 {
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-align: left;
+  color: #ffffff;
+  padding-bottom: 10px;
+}
+
+.form-box__icons-futer {
+  display: block;
+  display: table-cell;
+  margin-top: 0px;
+  align-content: center;
+  /*display: flex;
+     justify-content: center;
+     align-items: center;
+     display: block;*/
+  /* width: 206px;*/
+  height: 80px;
+  margin-right: 93px;
+  /*margin-left: 70px;*/
 }
 
 /* Наше портфолио */
