--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
 }
-.socials-item {
+.masters-socials__socials-item {
   width: 44px;
   height: 44px;
   &:not(:last-child) {
@@ -10,7 +10,7 @@
   }
 }
 
-.socials-link {
+.masters-socials__socials-link {
   width: 100%;
   height: 100%;
   display: flex;
@@ -31,7 +31,7 @@
     fill: #ffffff;
   }
 }
-.socials-icon {
+.masters-socials__socials-icon {
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
