--- a/sass/layout/_client.scss
+++ b/sass/layout/_client.scss
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
 }
-.client-item {
+.masters-client__item {
   width: 170px;
   height: 92px;
   border-radius: 4px;
@@ -29,7 +29,7 @@
     /*background-color: blue;*/
   }
 }
-.client-link {
+.masters-client__link {
   width: 100%;
   height: 100%;
   /*display: flex;
@@ -49,7 +49,7 @@
   }
 }
 
-.client-icon {
+.masters-client__icon {
   margin: 16px 32px 16px 32px;
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
