--- a/sass/layout/_positions.scss
+++ b/sass/layout/_positions.scss
@@ -18,13 +18,14 @@
   border-radius: 4px;
   /*/box-shadow: 0 0 4px 0 black;*/
 }
-.position-list-img:not(:last-child) {
-  margin-right: 30px;
-}
-.position-list-img {
+
+.position-list__img {
   text-align: center;
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
-.position-list-text {
+.position-list__text {
   height: 168px;
   /* margin-top: 30px;*/
   /* margin-bottom: 30px;*/
