--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "./utils/vars";
+@import "./utils/mixins";
 @import "./base/reset";
 @import "./utils/hidden";
 @import "./utils/animations";
@@ -8,7 +9,7 @@
 @import "./base/section";
 @import "./layout/site-nav";
 @import "./layout/hero";
-@import "./layout/modal";
+@import "./components/modal";
 @import "./layout/benefits";
 @import "./layout/work-section";
 @import "./layout/positions";
