--- a/css/main.css
+++ b/css/main.css
@@ -198,13 +198,13 @@ img {
   padding-bottom: 32px;*/
 }
 
-.link-items {
+.nav-link {
   display: flex;
   align-items: center;
   margin-left: auto;
 }
 
-.link-items:not(:last-child) {
+.nav-link:not(:last-child) {
   margin-right: 50px;
 }
 
@@ -250,7 +250,7 @@ img {
   color: var(--accent-color);
 }
 
-.link-items .current {
+.current {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -264,53 +264,53 @@ img {
   transition: color fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link-items .current:not(:last-child) {
+.current:not(:last-child) {
   margin-right: 50px;
 }
 
-.link-items .current:hover, .link-items .current:focus {
+.current:hover, .current:focus {
   color: var(--accent-color);
   fill: var(--accent-color);
 }
 
-.link-items .current:hover use,
-.link-items .current:focus use {
+.current:hover use,
+.current:focus use {
   color: var(--accent-color);
   fill: var(--accent-color);
 }
 
-.icon-envelope {
+.nav-link__icon-envelope {
   background-color: #ffffff;
   fill: #757575;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-envelope:hover, .icon-envelope:focus {
+.nav-link__icon-envelope:hover, .nav-link__icon-envelope:focus {
   fill: var(--accent-color);
 }
 
-.icon-smartphone {
+.nav-link__icon-smartphone {
   fill: #757575;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-smartphone:hover, .icon-smartphone:focus {
+.nav-link__icon-smartphone:hover, .nav-link__icon-smartphone:focus {
   fill: var(--accent-color);
 }
 
-.nav-item {
+.site-nav__item {
   position: relative;
 }
 
-.site-nav .nav-item:not(:last-child) {
+.site-nav .site-nav__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.nav-item-link.current {
+.site-nav__current {
   color: var(--accent-color);
 }
 
-.nav-item-link.current::after {
+.site-nav__current::after {
   content: "";
   position: absolute;
   left: 0;
@@ -1007,7 +1007,7 @@ footer {
   margin-bottom: 50px;
 }
 
-.portfolio-list {
+.portfolio__list {
   display: flex;
   justify-content: center;
   /*margin-top: 94px;*/
@@ -1015,12 +1015,12 @@ footer {
   /* width: 1200px;*/
 }
 
-.portfolio-list-item {
+.portfolio__list-item {
   display: block;
   justify-content: center;
 }
 
-.portfolio-list-item:not(:last-child) {
+.portfolio__list-item:not(:last-child) {
   margin-right: 8px;
   /*justify-content: center;*/
 }
@@ -1032,12 +1032,7 @@ footer {
   margin-left: -36px;
 }
 
-/*.portfolio-img li  {
-  flex-basis: calc((100%-270px) / 9);
-  margin-top: 30px;
-  margin-left: 30px;
-} */
-.portfolio-img-item {
+.portfolio-img__item {
   flex-basis: calc(100% / 3 - 32px);
   margin-top: 30px;
   margin-left: 30px;
@@ -1045,23 +1040,17 @@ footer {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-img-item:hover, .portfolio-img-item:focus {
+.portfolio-img__item:hover, .portfolio-img__item:focus {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   opacity: 1;
 }
 
-.portfolio-text {
-  /*height: 90px;*/
+.portfolio-img__text {
   width: 322px;
   padding-top: 20px;
   padding-bottom: 20px;
   padding-right: 24px;
   padding-left: 24px;
-  /*margin-top: 20px;
-  margin-bottom: 20px;
-  margin-right: 24px;
-  margin-left: 24px;*/
-  /*border: 1px solid rgba(238, 238, 238, 1);*/
 }
 
 .portfolio-img h3 {
@@ -1077,7 +1066,7 @@ footer {
   /*text-align: center;*/
 }
 
-.portfolio-text p {
+.portfolio-img__text p {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -1123,12 +1112,12 @@ footer {
   letter-spacing: 0.03em;
 }
 
-.portfolio-img-overl {
+.portfolio-img__overl {
   position: relative;
   overflow: hidden;
 }
 
-.portfolio-text-overl {
+.portfolio-img__text-overl {
   position: absolute;
   /*content: '';*/
   left: 0px;
@@ -1145,12 +1134,12 @@ footer {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-img-over:hover .portfolio-text-overl,
-.portfolio-img-over:focus .portfolio-text-overl {
+.portfolio-img__over:hover .portfolio-img__text-overl,
+.portfolio-img__over:focus .portfolio-img__text-overl {
   transform: translateY(0);
 }
 
-.portfolio-text-overl p {
+.portfolio-img__text-overl p {
   padding: 64px 23px;
   font-size: 18px;
   font-family: Roboto;
